# Generated by Django 5.0.14 on 2026-06-12 16:45

import django.contrib.auth.models
import django.contrib.auth.validators
import django.core.validators
import django.db.models.deletion
import django.utils.timezone
from decimal import Decimal
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('auth', '0012_alter_user_first_name_max_length'),
    ]

    operations = [
        migrations.CreateModel(
            name='Allergene',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nome', models.CharField(max_length=80, unique=True)),
                ('descrizione', models.TextField(blank=True)),
            ],
            options={
                'ordering': ['nome'],
            },
        ),
        migrations.CreateModel(
            name='CategoriaAlimento',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nome', models.CharField(max_length=80, unique=True)),
                ('descrizione', models.TextField(blank=True)),
            ],
            options={
                'ordering': ['nome'],
            },
        ),
        migrations.CreateModel(
            name='Mensa',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nome', models.CharField(max_length=120, unique=True)),
                ('edificio', models.CharField(max_length=120)),
                ('indirizzo', models.CharField(max_length=255)),
                ('orario_apertura', models.TimeField()),
                ('orario_chiusura', models.TimeField()),
                ('attiva', models.BooleanField(default=True)),
            ],
            options={
                'ordering': ['nome'],
            },
        ),
        migrations.CreateModel(
            name='Utente',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('password', models.CharField(max_length=128, verbose_name='password')),
                ('last_login', models.DateTimeField(blank=True, null=True, verbose_name='last login')),
                ('is_superuser', models.BooleanField(default=False, help_text='Designates that this user has all permissions without explicitly assigning them.', verbose_name='superuser status')),
                ('username', models.CharField(error_messages={'unique': 'A user with that username already exists.'}, help_text='Required. 150 characters or fewer. Letters, digits and @/./+/-/_ only.', max_length=150, unique=True, validators=[django.contrib.auth.validators.UnicodeUsernameValidator()], verbose_name='username')),
                ('first_name', models.CharField(blank=True, max_length=150, verbose_name='first name')),
                ('last_name', models.CharField(blank=True, max_length=150, verbose_name='last name')),
                ('is_staff', models.BooleanField(default=False, help_text='Designates whether the user can log into this admin site.', verbose_name='staff status')),
                ('is_active', models.BooleanField(default=True, help_text='Designates whether this user should be treated as active. Unselect this instead of deleting accounts.', verbose_name='active')),
                ('date_joined', models.DateTimeField(default=django.utils.timezone.now, verbose_name='date joined')),
                ('email', models.EmailField(max_length=254, unique=True)),
                ('ruolo', models.CharField(choices=[('studente', 'Studente'), ('operatore_mensa', 'Operatore mensa'), ('amministratore', 'Amministratore')], max_length=30)),
                ('groups', models.ManyToManyField(blank=True, help_text='The groups this user belongs to. A user will get all permissions granted to each of their groups.', related_name='user_set', related_query_name='user', to='auth.group', verbose_name='groups')),
                ('user_permissions', models.ManyToManyField(blank=True, help_text='Specific permissions for this user.', related_name='user_set', related_query_name='user', to='auth.permission', verbose_name='user permissions')),
            ],
            options={
                'verbose_name': 'Utente',
                'verbose_name_plural': 'Utenti',
            },
            managers=[
                ('objects', django.contrib.auth.models.UserManager()),
            ],
        ),
        migrations.CreateModel(
            name='Amministratore',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('area_responsabilita', models.CharField(max_length=120)),
                ('utente', models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, related_name='profilo_amministratore', to=settings.AUTH_USER_MODEL)),
            ],
        ),
        migrations.CreateModel(
            name='OperatoreMensa',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('codice_operatore', models.CharField(max_length=30, unique=True)),
                ('mansione', models.CharField(max_length=120)),
                ('data_assunzione', models.DateField(default=django.utils.timezone.localdate)),
                ('mensa', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='operatori', to='mensa.mensa')),
                ('utente', models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, related_name='profilo_operatore', to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'ordering': ['mensa__nome', 'utente__last_name'],
            },
        ),
        migrations.CreateModel(
            name='LottoInvenduto',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('quantita_iniziale', models.PositiveIntegerField(validators=[django.core.validators.MinValueValidator(1)])),
                ('quantita_disponibile', models.PositiveIntegerField(validators=[django.core.validators.MinValueValidator(0)])),
                ('data_pubblicazione', models.DateField(default=django.utils.timezone.localdate)),
                ('data_scadenza', models.DateField()),
                ('ora_inizio_ritiro', models.TimeField()),
                ('ora_fine_ritiro', models.TimeField()),
                ('prezzo_simbolico', models.DecimalField(decimal_places=2, default=Decimal('0.00'), max_digits=6)),
                ('stato', models.CharField(choices=[('disponibile', 'Disponibile'), ('esaurito', 'Esaurito'), ('chiuso', 'Chiuso'), ('scaduto', 'Scaduto'), ('annullato', 'Annullato')], default='disponibile', max_length=20)),
                ('note', models.TextField(blank=True)),
                ('mensa', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='lotti', to='mensa.mensa')),
                ('operatore', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='lotti_creati', to='mensa.operatoremensa')),
            ],
            options={
                'ordering': ['-data_pubblicazione', 'mensa__nome', 'ora_inizio_ritiro'],
            },
        ),
        migrations.CreateModel(
            name='Prenotazione',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('quantita', models.PositiveIntegerField(validators=[django.core.validators.MinValueValidator(1)])),
                ('stato', models.CharField(choices=[('attiva', 'Attiva'), ('annullata', 'Annullata'), ('ritirata', 'Ritirata'), ('scaduta', 'Scaduta')], default='attiva', max_length=20)),
                ('data_prenotazione', models.DateTimeField(default=django.utils.timezone.now)),
                ('lotto', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='prenotazioni', to='mensa.lottoinvenduto')),
            ],
            options={
                'ordering': ['-data_prenotazione'],
            },
        ),
        migrations.CreateModel(
            name='ProdottoAlimentare',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nome', models.CharField(max_length=120)),
                ('descrizione', models.TextField(blank=True)),
                ('vegetariano', models.BooleanField(default=False)),
                ('vegano', models.BooleanField(default=False)),
                ('attivo', models.BooleanField(default=True)),
                ('categoria', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='prodotti', to='mensa.categoriaalimento')),
            ],
            options={
                'ordering': ['categoria__nome', 'nome'],
            },
        ),
        migrations.AddField(
            model_name='lottoinvenduto',
            name='prodotto',
            field=models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='lotti', to='mensa.prodottoalimentare'),
        ),
        migrations.CreateModel(
            name='ProdottoAllergene',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('allergene', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='mensa.allergene')),
                ('prodotto', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='mensa.prodottoalimentare')),
            ],
        ),
        migrations.AddField(
            model_name='prodottoalimentare',
            name='allergeni',
            field=models.ManyToManyField(blank=True, related_name='prodotti', through='mensa.ProdottoAllergene', to='mensa.allergene'),
        ),
        migrations.CreateModel(
            name='Ritiro',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('data_ora_ritiro', models.DateTimeField(default=django.utils.timezone.now)),
                ('esito', models.CharField(choices=[('consegnato', 'Consegnato'), ('non_consegnato', 'Non consegnato'), ('annullato', 'Annullato')], default='consegnato', max_length=20)),
                ('note', models.TextField(blank=True)),
                ('operatore', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='ritiri_confermati', to='mensa.operatoremensa')),
                ('prenotazione', models.OneToOneField(on_delete=django.db.models.deletion.PROTECT, related_name='ritiro', to='mensa.prenotazione')),
            ],
            options={
                'ordering': ['-data_ora_ritiro'],
            },
        ),
        migrations.CreateModel(
            name='Studente',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('matricola', models.CharField(max_length=20, unique=True)),
                ('corso_studi', models.CharField(max_length=120)),
                ('anno_corso', models.PositiveSmallIntegerField(validators=[django.core.validators.MinValueValidator(1), django.core.validators.MaxValueValidator(6)])),
                ('data_registrazione', models.DateField(default=django.utils.timezone.localdate)),
                ('utente', models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, related_name='profilo_studente', to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'ordering': ['utente__last_name', 'utente__first_name'],
            },
        ),
        migrations.CreateModel(
            name='Segnalazione',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('titolo', models.CharField(max_length=160)),
                ('descrizione', models.TextField()),
                ('stato', models.CharField(choices=[('aperta', 'Aperta'), ('in_carico', 'In carico'), ('risolta', 'Risolta'), ('respinta', 'Respinta'), ('chiusa', 'Chiusa')], default='aperta', max_length=20)),
                ('esito', models.TextField(blank=True)),
                ('data_apertura', models.DateTimeField(default=django.utils.timezone.now)),
                ('data_chiusura', models.DateTimeField(blank=True, null=True)),
                ('amministratore', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.PROTECT, related_name='segnalazioni_gestite', to='mensa.amministratore')),
                ('prenotazione', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='segnalazioni', to='mensa.prenotazione')),
                ('autore', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='segnalazioni', to='mensa.studente')),
            ],
            options={
                'ordering': ['stato', '-data_apertura'],
            },
        ),
        migrations.CreateModel(
            name='RecensioneMensa',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('voto', models.PositiveSmallIntegerField(validators=[django.core.validators.MinValueValidator(1), django.core.validators.MaxValueValidator(5)])),
                ('commento', models.TextField(blank=True)),
                ('data_inserimento', models.DateTimeField(default=django.utils.timezone.now)),
                ('mensa', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='recensioni', to='mensa.mensa')),
                ('prenotazione', models.OneToOneField(on_delete=django.db.models.deletion.PROTECT, related_name='recensione', to='mensa.prenotazione')),
                ('studente', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='recensioni', to='mensa.studente')),
            ],
            options={
                'ordering': ['-data_inserimento'],
            },
        ),
        migrations.AddField(
            model_name='prenotazione',
            name='studente',
            field=models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='prenotazioni', to='mensa.studente'),
        ),
        migrations.AddConstraint(
            model_name='prodottoallergene',
            constraint=models.UniqueConstraint(fields=('prodotto', 'allergene'), name='uniq_prodotto_allergene'),
        ),
        migrations.AddConstraint(
            model_name='prodottoalimentare',
            constraint=models.UniqueConstraint(fields=('categoria', 'nome'), name='uniq_prodotto_per_categoria'),
        ),
    ]
